@@ -222,13 +222,14 @@ fillHybridE_left( const size_t si1, const size_t si2 )
 	const size_t noLpShift = outConstraint.noLP ? 1 : 0;
 	E_type iStackE = E_type(0);
 
-	// iterate over all window starts j1 (seq1) and j2 (seq2)
-	for (i1=si1; si1-i1 < hybridE_left.size1(); i1--) {
-		// screen for right boundaries in seq2
-		for (i2=si2; si2-i2 < hybridE_left.size2(); i2--) {
+	// iterate over all window starts
+	for (size_t l1=0; l1 < hybridE_left.size1(); l1++) {
+		for (size_t l2=0; l2 < hybridE_left.size2(); l2++) {
+			i1 = si1-l1;
+			i2 = si2-l2;
 
 			// referencing cell access
-			E_type & curMinE = hybridE_left(si1-i1,si2-i2);
+			E_type & curMinE = hybridE_left(l1,l2);
 			// init cell
 			curMinE = (i1==si1 && i2==si2) ? energy.getE_init() : E_INF;
 			// check if complementary
@@ -242,10 +243,8 @@ fillHybridE_left( const size_t si1, const size_t si2 )
 					}
 					// get stacking energy to avoid recomputation in recursion below
 					iStackE = energy.getE_interLeft(i1,i1+noLpShift,i2,i2+noLpShift);
-					// check just stacked seed extension
-					if (i1+noLpShift==si1 && i2+noLpShift==si2) {
-						curMinE = std::min( curMinE, iStackE + hybridE_left(0,0) );
-					}
+					// check just stacked
+					curMinE = std::min( curMinE, iStackE + hybridE_left(l1-noLpShift,l2-noLpShift));
 				}
 
 				// check all combinations of decompositions into (i1,i2)..(k1,k2)-(j1,j2)
